profiling-using-exp-runner/recursive-nqueens-remote/experiments/nqueens_experiment/run_6_repetition_0/energibridge.log
sampling interval: 200, target function: solve_n_queens, input size: 8192
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.n_queens as module; board = [[0 for _ in range(8192)] for _ in range(8192)]；X = tuple(map(tuple, board));X = tuple(np.random.random(8192)); module.solve_n_queens(X,0)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 17.672093818664553 for 0.23057415 sec of execution.
